# testGame

./: CMakeLists.txt  CMakeLists.txt.user.7ab430b  CMakeLists.txt.user.ac39313
client/: CMakeLists.txt  client.cpp  client.h  clientdefwidget.cpp  clientdefwidget.h  clientdefwidget.ui  finish.cpp  finish.h  finish.ui  game.cpp  game.h  ingamewidget.cpp  ingamewidget.h  ingamewidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
common/: CMakeLists.txt  data.cpp  data.h  errors.cpp  errors.h
server/: CMakeLists.txt  game.cpp  game.h  main.cpp  server.cpp  server.h
